--- a/public/css/main.css
+++ b/public/css/main.css
@@ -238,48 +238,40 @@ section.select-year {
   text-align: center;
 }
 
-
-
-
-
-/*img.thumbnail {
-  box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.45);
-  overflow:hidden;
+.select-year .customSelect {
+  text-align: left;
+  width: 280px;
+  background-color: white;
+  padding: 6px 10px;
+  border: 2px solid #b7bfcf;
+  background: url(../images/select-box-bg.gif?ver=3) right center;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  -moz-box-sizing: border-box !important;
+  -webkit-box-sizing: border-box !important;
+  box-sizing: border-box !important;
 }
 
-a .thumbnail {
- text-decoration: none; 
+.select-year .customSelect.customSelectHover {
+  border-color: #aeb7c9;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1px 1px 2px;
 }
 
-.overlay {
-  background:rgba(0,0,0,.3);
-  text-align:center;
-  padding:0 0 66px 0;
-  opacity:0;
-  -webkit-transition: opacity .25s ease;
-  -moz-transition: opacity .25s ease;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
+.select-year .customSelect.customSelectFocus {
+  border-color: #996633;
 }
 
-img.thumbnail:hover .overlay {
-  opacity:1;
+.select-year .customSelect.customSelectOpen {
+  border-color: #5d5074;
+  background: url(../images/select-box-bg-on.gif?ver=3) right center;
+  background-repeat: no-repeat;
 }
-
-.btn-action {
-  font-family:Helvetica;
-  font-weight:900;
-  color:rgba(255,255,255,.85);
-  font-size:16px;
-}*/
-
-
-
-
-
-
-
 
 
 
