--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,13 +63,17 @@ textarea {
    ========================================================================== */
 
 body {
-  font: 16px/26px "proxima-nova", "Times New Roman", Helvetica Neue, Helvetica, Arial;
+  font: 16px/26px "proxima-nova", Helvetica Neue, Helvetica, Arial;
   background: #eaeaea;
 }
 
 .wrapper {
   width: 90%; 
   margin: 0 5%;
+}
+
+h1, h2, h3, h3, h5, h6 {
+  font-weight: 400;
 }
 
 /* ===================
@@ -93,6 +97,14 @@ body {
 
 .title {
   color: white;
+  font-weight: 300;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.2);
+}
+
+.sub-title {
+  color: #777;
+  font-weight: 300;
+  font-size: .7em;
 }
 
 /* ==============
@@ -155,6 +167,10 @@ nav a:hover {
   width: 47%;
   margin-left: 3%;
   margin-bottom: 2em;
+}
+
+.main article.results-list-item header {
+  margin-bottom: 5px;
 }
 
 .main article.results-list-item a:link {
@@ -232,6 +248,22 @@ select {
     width: 300px;
     position: relative;
     box-sizing: border-box;
+}
+
+.select-year {
+  min-height: 130px;
+  margin-top: 40px;
+  border-bottom: 2px solid #eee;
+  margin-bottom: 20px;
+}
+
+.select-year header {
+    font-size: 1.6em;
+    color: #333;
+    margin-bottom: 20px;
+    letter-spacing: -0.0325em;
+    font-weight: 400;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 section.select-year {
