--- a/public/css/main.css
+++ b/public/css/main.css
@@ -258,16 +258,10 @@ select {
     -webkit-padding-start: 2px;
     -moz-padding-start: 2px;
     background-color: #F07575; /* fallback color if gradients are not supported */
-    background-image: url(../images/select-arrow.png), -webkit-linear-gradient(top, #E5E5E5, #F4F4F4); /* For Chrome and Safari */
-    background-image: url(../images/select-arrow.png), -moz-linear-gradient(top, #E5E5E5, #F4F4F4); /* For old Fx (3.6 to 15) */
-    background-image: url(../images/select-arrow.png), -ms-linear-gradient(top, #E5E5E5, #F4F4F4); /* For pre-releases of IE 10*/
-    background-image: url(../images/select-arrow.png), -o-linear-gradient(top, #E5E5E5, #F4F4F4); /* For old Opera (11.1 to 12.0) */ 
-    background-image: url(../images/select-arrow.png), linear-gradient(to bottom, #E5E5E5, #F4F4F4); /* Standard syntax; must be last */
     background-position: center right;
     background-repeat: no-repeat;
     border: 3px solid #fff;
     border-radius: 2px;
-/*    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);*/
     -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,.25),transparent 0 0 0,transparent 0 0 0;
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.25),transparent 0 0 0,transparent 0 0 0;
     color: #555;
@@ -282,11 +276,13 @@ select {
     box-sizing: border-box;
 }
 
+.select-year-hero {
+	background: #efefef;
+	padding: 50px 0 30px 0;
+}
+
 .select-year {
   min-height: 130px;
-  margin-top: 40px;
-  border-bottom: 2px solid #eee;
-  margin-bottom: 20px;
 }
 
 .select-year header {
