fixed the responsive issue with the iframe

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -352,7 +352,10 @@ section.select-year {
   background-repeat: no-repeat;
 }
 
-
+.fancy_frame{
+  width: 640px; 
+  height:390px;
+}
 
 /* ==========================================================================
    Media Queries
